syntax = "proto3";

package chat_system_proto;

service ChatService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
  rpc GetChatHistory (ChatHistoryRequest) returns (ChatHistoryResponse);
  rpc LiveChat (ChatHistoryRequest) returns (ChatHistoryResponse);
}

message MessageRequest {
  string user = 1;
  string message = 2;
}

message MessageResponse {
  string user = 1;
  string message = 2;
}

message ChatHistoryRequest {
  string userId = 1;
  string message = 2;
}

message ChatHistoryResponse {
  repeated string messages = 1;
}

message LiveChatRequest {
  string userId = 1;
  string message = 2;
}

message LiveChatResponse {
  repeated string messages = 1;
}